--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/prettier": "^3.0.0",
     "prettier": "^3.0.3",
@@ -34,9 +35,9 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
