--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/lodash": "^4.14.199",
     "@types/prettier": "^3.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
