--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,6 +5,7 @@
     "baseUrl": "./src",
     "paths": {
       "@app/*": ["./*"],
+      "@layouts/*": ["./layouts/*"],
       "@pages/*": ["./pages/*"],
       "@components/*": ["./components/*"],
       "@styles/*": ["./styles/*"]
