--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/mouse-position": "^4.1.3",
+    "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
