--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@prisma/client": "^5.4.2",
     "@react-hook/mouse-position": "^4.1.3",
     "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
@@ -16,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
+    "sonner": "^1.0.3",
     "styled-components": "^6.1.0",
     "zustand": "^4.4.3"
   },
@@ -35,6 +38,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3.3.3",
     "twin.macro": "^3.4.0",
     "typescript": "^5"
