--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-hook/mouse-position": "^4.1.3",
     "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.22.5",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18",
